Tests/Results/ardhat.avr/avr.ardhat/error_log.txt
-- The CXX compiler identification is GNU 7.3.0
-- Check for working CXX compiler: /opt/arduino-1.8.12/hardware/tools/avr/bin/avr-g++
-- Check for working CXX compiler: /opt/arduino-1.8.12/hardware/tools/avr/bin/avr-g++ - works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- The ASM compiler identification is GNU
-- Found assembler: /opt/arduino-1.8.12/hardware/tools/avr/bin/avr-gcc
-- The C compiler identification is GNU 7.3.0
-- Check for working C compiler: /opt/arduino-1.8.12/hardware/tools/avr/bin/avr-gcc
-- Check for working C compiler: /opt/arduino-1.8.12/hardware/tools/avr/bin/avr-gcc - works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Detecting C compile features
-- Detecting C compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat
/mnt/LIN_BUILD/cmake-3.17.0-rc3-Linux-x86_64/bin/cmake -S/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Examples/01_hello_world -B/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat --check-build-system CMakeFiles/Makefile.cmake 0
/mnt/LIN_BUILD/cmake-3.17.0-rc3-Linux-x86_64/bin/cmake -E cmake_progress_start /mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat/CMakeFiles /mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat/CMakeFiles/progress.marks
/usr/bin/make -f CMakeFiles/Makefile2 all
make[1]: Entering directory '/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat'
/usr/bin/make -f CMakeFiles/_arduino_lib_core_cobjects_.dir/build.make CMakeFiles/_arduino_lib_core_cobjects_.dir/depend
make[2]: Entering directory '/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat'
cd /mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat && /mnt/LIN_BUILD/cmake-3.17.0-rc3-Linux-x86_64/bin/cmake -E cmake_depends "Unix Makefiles" /mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Examples/01_hello_world /mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Examples/01_hello_world /mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat /mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat /mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat/CMakeFiles/_arduino_lib_core_cobjects_.dir/DependInfo.cmake --color=
Dependee "/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat/CMakeFiles/_arduino_lib_core_cobjects_.dir/DependInfo.cmake" is newer than depender "/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat/CMakeFiles/_arduino_lib_core_cobjects_.dir/depend.internal".
Dependee "/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat/CMakeFiles/CMakeDirectoryInformation.cmake" is newer than depender "/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat/CMakeFiles/_arduino_lib_core_cobjects_.dir/depend.internal".
Scanning dependencies of target _arduino_lib_core_cobjects_
make[2]: Leaving directory '/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat'
/usr/bin/make -f CMakeFiles/_arduino_lib_core_cobjects_.dir/build.make CMakeFiles/_arduino_lib_core_cobjects_.dir/build
make[2]: Entering directory '/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat'
[  3%] Building ASM object CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_pulse.S.obj
/opt/arduino-1.8.12/hardware/tools/avr/bin/avr-gcc  -c -g -x assembler-with-cpp -flto -MMD -mmcu=atmega328p -DF_CPU=16000000L -DARDUINO=10812 -DARDUINO_AVR_ARDHAT -DARDUINO_ARCH_AVR    -I/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino -I/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard   /opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_pulse.S -o CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_pulse.S.obj
[  7%] Building C object CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/WInterrupts.c.o
/opt/arduino-1.8.12/hardware/tools/avr/bin/avr-gcc  -c -g -Os -w -std=gnu11 -ffunction-sections -fdata-sections -MMD -flto -fno-fat-lto-objects -mmcu=atmega328p -DF_CPU=16000000L -DARDUINO=10812 -DARDUINO_AVR_ARDHAT -DARDUINO_ARCH_AVR    -I/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino -I/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard   /opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/WInterrupts.c -o CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/WInterrupts.c.o
[ 10%] Building C object CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/hooks.c.o
/opt/arduino-1.8.12/hardware/tools/avr/bin/avr-gcc  -c -g -Os -w -std=gnu11 -ffunction-sections -fdata-sections -MMD -flto -fno-fat-lto-objects -mmcu=atmega328p -DF_CPU=16000000L -DARDUINO=10812 -DARDUINO_AVR_ARDHAT -DARDUINO_ARCH_AVR    -I/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino -I/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard   /opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/hooks.c -o CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/hooks.c.o
[ 14%] Building C object CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring.c.o
/opt/arduino-1.8.12/hardware/tools/avr/bin/avr-gcc  -c -g -Os -w -std=gnu11 -ffunction-sections -fdata-sections -MMD -flto -fno-fat-lto-objects -mmcu=atmega328p -DF_CPU=16000000L -DARDUINO=10812 -DARDUINO_AVR_ARDHAT -DARDUINO_ARCH_AVR    -I/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino -I/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard   /opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring.c -o CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring.c.o
[ 17%] Building C object CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_analog.c.o
/opt/arduino-1.8.12/hardware/tools/avr/bin/avr-gcc  -c -g -Os -w -std=gnu11 -ffunction-sections -fdata-sections -MMD -flto -fno-fat-lto-objects -mmcu=atmega328p -DF_CPU=16000000L -DARDUINO=10812 -DARDUINO_AVR_ARDHAT -DARDUINO_ARCH_AVR    -I/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino -I/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard   /opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_analog.c -o CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_analog.c.o
[ 21%] Building C object CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_digital.c.o
/opt/arduino-1.8.12/hardware/tools/avr/bin/avr-gcc  -c -g -Os -w -std=gnu11 -ffunction-sections -fdata-sections -MMD -flto -fno-fat-lto-objects -mmcu=atmega328p -DF_CPU=16000000L -DARDUINO=10812 -DARDUINO_AVR_ARDHAT -DARDUINO_ARCH_AVR    -I/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino -I/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard   /opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_digital.c -o CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_digital.c.o
In file included from /opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/Arduino.h:258:0,
                 from /opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_private.h:31,
                 from /opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_digital.c:26:
/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard/pins_arduino.h:187:21: error: 'DDRA' undeclared here (not in a function); did you mean 'DDRB'?
         (uint16_t) &DDRA,
                     ^~~~
                     DDRB
/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard/pins_arduino.h:195:21: error: 'PORTA' undeclared here (not in a function); did you mean 'PORT0'?
         (uint16_t) &PORTA,
                     ^~~~~
                     PORT0
/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard/pins_arduino.h:195:9: error: initializer element is not constant
         (uint16_t) &PORTA,
         ^
/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard/pins_arduino.h:195:9: note: (near initialization for 'port_to_output_PGM[1]')
/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard/pins_arduino.h:202:21: error: 'PINA' undeclared here (not in a function); did you mean 'PIN0'?
         (uint16_t) &PINA,
                     ^~~~
                     PIN0
/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard/pins_arduino.h:202:9: error: initializer element is not constant
         (uint16_t) &PINA,
         ^
/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/_pkg_mgr/packages/ardhat/hardware/avr/1.0.0/variants/standard/pins_arduino.h:202:9: note: (near initialization for 'port_to_input_PGM[1]')
CMakeFiles/_arduino_lib_core_cobjects_.dir/build.make:139: recipe for target 'CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_digital.c.o' failed
make[2]: *** [CMakeFiles/_arduino_lib_core_cobjects_.dir/opt/arduino-1.8.12/hardware/arduino/avr/cores/arduino/wiring_digital.c.o] Error 1
make[2]: Leaving directory '/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat'
CMakeFiles/Makefile2:212: recipe for target 'CMakeFiles/_arduino_lib_core_cobjects_.dir/all' failed
make[1]: *** [CMakeFiles/_arduino_lib_core_cobjects_.dir/all] Error 2
make[1]: Leaving directory '/mnt/LIN_BUILD/src/Arduino-CMake-toolchain/Arduino-CMake-toolchain/Tests-build/build/ardhat.avr/avr.ardhat'
Makefile:103: recipe for target 'all' failed
make: *** [all] Error 2
burn-bootloader has unknown variables: PROTOCOL, PROGRAM_EXTRA_PARAMS